2.0.0 (#1)
* wip

* wip

* wip

* wip

* wip

* misc

* fix

* readmes

* wip

* wip

* build cleanup

* wip

* wip

* wip

* wip

* wip

* Delete metadata.lck

* checkin

* Update .gitignore

* fixes

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip